# couchbase-cli

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  Makefile.am  Pipfile  README  README.adoc  README.md  argparse.py  buckets.py  cb-non-package-installer  cb_bin_client.py  cb_util.py  cb_version.cmake.py  cbbackup  cbbackupwrapper  cbclusterstats  cbcollections.py  cblogredaction  cbmgr.py  cbqueue.py  cbrecovery  cbrestore  cbrestorewrapper  cbsnappy.py  cbtransfer  cbworkloadgen  cluster_manager.py  cluster_stats.py  collector.py  configure.ac  couchbase  couchbase-cli  couchbaseConstants.py  diskqueue_stats.py  info.py  listservers.py  mbsamp  mbsamp-graphs.html  (+46 more)
.githooks/: pre-commit  pre-push
docs/: CMakeLists.txt  antora.yml  asciidoc.conf  asciidoctor-ext.rb  cbbackup-2i.txt  cbbackup-incr-func-spec.md  cblogredaction.txt  cbrecovery-design_spec.md  cbtransfer-func-spec.jira  cbworkloadgen.md  cli-2.0-func-spec.md  cli-2.5-func-spec.md  cli-3.0-func-spec.md  cli-sherlock-func-spec.md  couchbase-cli-admin-role-manage.txt  couchbase-cli-bucket-compact.txt  couchbase-cli-bucket-create.txt  couchbase-cli-bucket-delete.txt  couchbase-cli-bucket-edit.txt  couchbase-cli-bucket-flush.txt  couchbase-cli-bucket-list.txt  couchbase-cli-cluster-edit.txt  couchbase-cli-cluster-init.txt  couchbase-cli-collect-logs-start.txt  couchbase-cli-collect-logs-status.txt  couchbase-cli-collect-logs-stop.txt  couchbase-cli-eventing-function-setup.txt  couchbase-cli-failover.txt  couchbase-cli-group-manage.txt  couchbase-cli-help.txt  couchbase-cli-host-list.txt  couchbase-cli-master-password.txt  couchbase-cli-node-init.txt  couchbase-cli-rebalance-status.txt  couchbase-cli-rebalance-stop.txt  couchbase-cli-rebalance.txt  couchbase-cli-recovery.txt  couchbase-cli-reset-admin-password.txt  couchbase-cli-server-add.txt  couchbase-cli-server-eshell.txt  (+31 more)
docs/design/: cbbackup-incr-func-spec.md  cbbackup-restore-func-spec.jira  cli-2.5-func-spec.md  cli-ssl.md
docs/modules/cli/pages/_partials/: nav-cbbackup.adoc  nav-cbbackupwrapper.adoc  nav-cblogredaction.adoc  nav-cbrecovery.adoc  nav-cbrestore.adoc  nav-cbrestorewrapper.adoc  nav-cbtransfer.adoc  nav-cbworkloadgen.adoc
docs/modules/cli/pages/_partials/cbcli/: nav.adoc  part-certificate-authentication.adoc  part-common-cluster.adoc  part-common-env.adoc  part-common-extras.adoc  part-common-history-retention.adoc  part-common-options-no-creds.adoc  part-common-options.adoc  part-common-pitr-options.adoc  part-footer.adoc  part-host-formats.adoc
docs/modules/cli/pages/cbcli/: cblogredaction.adoc  couchbase-cli-admin-manage.adoc  couchbase-cli-admin-role-manage.adoc  couchbase-cli-analytics-link-setup.adoc  couchbase-cli-backup-service-instance.adoc  couchbase-cli-backup-service-nodes-threads-map.adoc  couchbase-cli-backup-service-plan.adoc  couchbase-cli-backup-service-profile.adoc  couchbase-cli-backup-service-repo-add.adoc  couchbase-cli-backup-service-repo-archive.adoc  couchbase-cli-backup-service-repo-cloud-config.adoc  couchbase-cli-backup-service-repo-get.adoc  couchbase-cli-backup-service-repo-list.adoc  couchbase-cli-backup-service-repo-pause.adoc  couchbase-cli-backup-service-repo-remove.adoc  couchbase-cli-backup-service-repo-resume.adoc  couchbase-cli-backup-service-repo-worm.adoc  couchbase-cli-backup-service-repository.adoc  couchbase-cli-backup-service-settings.adoc  couchbase-cli-backup-service.adoc  couchbase-cli-bucket-compact.adoc  couchbase-cli-bucket-create.adoc  couchbase-cli-bucket-delete.adoc  couchbase-cli-bucket-edit.adoc  couchbase-cli-bucket-flush.adoc  couchbase-cli-bucket-list.adoc  couchbase-cli-change-cluster-encryption.adoc  couchbase-cli-change-ip-family.adoc  couchbase-cli-cluster-edit.adoc  couchbase-cli-cluster-init.adoc  couchbase-cli-collect-logs-start.adoc  couchbase-cli-collect-logs-status.adoc  couchbase-cli-collect-logs-stop.adoc  couchbase-cli-collection-manage.adoc  couchbase-cli-columnar-link-setup.adoc  couchbase-cli-enable-developer-preview.adoc  couchbase-cli-enterprise-analytics-link-setup.adoc  couchbase-cli-eventing-function-setup.adoc  couchbase-cli-failover.adoc  couchbase-cli-group-manage.adoc  (+47 more)
docs/modules/cli/pages/cbtools/: cbbackup.adoc  cbbackupwrapper.adoc  cbrecovery.adoc  cbrestore.adoc  cbrestorewrapper.adoc  cbtransfer.adoc  cbworkloadgen.adoc
docs/modules/cli/pages/cbtools/guides/: cbbackup-guide.adoc  cbrestore-guide.adoc  cbrestore-rehash1-guide.adoc
docs/modules/cli/pages/cbtools/old/: cbbackup-tool.adoc  cbbackup-wrapper.adoc  cbrecovery.adoc  cbrestore-tool.adoc  cbtransfer-tool.adoc  cbworkloadgen-tool.adoc
etc/: tools_descriptor.json
jenkins/: .aspell.en.pws  adoc-lint.sh
man/man1/: couchbase-cli-cluster-init.1  couchbase-cli-setting-notification.1
requests/: compat.py  models.py
static/: reset.css  screen.css
t/: Makefile  pump_dcp_test.py  pump_test.py  pump_upr_test.py
test/: mock_binary_server.py  mock_server.py  test_cbmgr.py  test_cbrecovery.py  test_cbworkloadgen.py  test_cli.py  test_cluster_manager.py  test_pumps.py  test_topology_bar.py  test_txn.py  test_x509_adapter.py
test/testdata/: invalid_cert.pem  invalid_cert_and_key.p12  invalid_key.p8  invalid_key.pem  invalid_key_p8.pem  valid_cert.pem  valid_cert_and_key.p12  valid_certs.pem  valid_certs_and_key.p12  valid_ecdsa_key.pem  valid_ed25519_key.pem  valid_key.pem  valid_key_p8.der  valid_key_p8.pem  valid_rsa_key.pem
wrapper/: wrapper  wrapper.in
